<resources>
    <string name="office_assistant">Office Assistant</string>
    <string name="app_motto_text">Mundane office tasks made simple :)</string>
    <string name="log_in">Log in</string>
    <string name="location_settings">Location settings</string>
    <string name="text_for_theme_colors">Theme colors</string>
    <string name="text_for_log_out">Log out</string>
    <string name="text_for_add_event">Add Event</string>
    <string name="text_for_map_icon">Map</string>
    <string name="text_for_workplaces_icon">Workplaces</string>
    <string name="text_for_meet_now_icon">Meet now</string>
    <string name="text_for_rooms_icon">Rooms</string>
    <string name="text_for_my_space_icon">My space</string>
    <string name="modify_event_toolbar">Modify event</string>
    <string name="new_event_toolbar">New event</string>
    <string name="lock_room_toolbar">Lock room</string>
    <string name="button_toolbar_save">SAVE</string>
    <string name="button_toolbar_lock">LOCK</string>

    <string name="user_selected_custom_time_option">In %1$s %2$s before</string>
    <string name="session_expired_dialog_title">Oops!</string>
    <string name="session_expired_dialog_message">Your session has expired :( . Please book your event again.</string>
    <string name="session_expired_admin_dialog_message">Your session has expired :( Please create a room locker again.</string>
    <string name="need_more_time_dialog_button">I need more time</string>
    <string name="need_more_time_dialog_title">Do you need more time?</string>
    <string name="need_more_time_dialog_message">The time slot that you selected can\'t be chosen by your colleagues. We can\'t hold the slot for too long. Please hurry up!</string>
    <string name="need_more_time_dialog_bottom_label">Your session will expire in:\ </string>
    <string name="session_expired_dialog_button">Got it</string>
    <string name="time_out_server_dialog_title">Server Time-Out</string>
    <string name="time_out_server_dialog_message">You can re-submit data to the Server ot to abort and reebook your event later</string>
    <string name="time_out_server_dialog_button_positive">Try again</string>
    <string name="time_out_server_dialog_button_negative">Leave</string>
    <string name="booked_successfully">Room has been booked_successfully</string>

    <string name="event_upcoming_notification_description">%1$s room, %2$s.\nYour event starts in %3$s.</string>
    <string name="notification_channel_reminder_name">MEETING ROOMS</string>
    <string name="notification_channel_reminder_description">This is the channel for upcoming events reminders</string>
    <string name="reminder_disabled_text_for_time">Never</string>
    <string name="reminder_custom_text_for_time">Custom...</string>
    <string name="custom_time_select_type_no_option_error">No such option</string>
    <string name="before">before</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="shortMinute">m</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="shortHour">h</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="shortDay">d</string>
    <plurals name="amountOfMinutes">
        <item quantity="one">@string/minute</item>
        <item quantity="other">@string/minutes</item>
    </plurals>
    <plurals name="amountOfHours">
        <item quantity="one">@string/hour</item>
        <item quantity="other">@string/hours</item>
    </plurals>
    <plurals name="amountOfDays">
        <item quantity="one">@string/day</item>
        <item quantity="other">@string/days</item>
    </plurals>
    <string-array name="arrayMinutes">
        <item>@string/minute</item>
        <item>@string/minutes</item>
    </string-array>
    <string-array name="arrayHours">
        <item>@string/hour</item>
        <item>@string/hours</item>
    </string-array>
    <string-array name="arrayDays">
        <item>@string/day</item>
        <item>@string/days</item>
    </string-array>
    <string name="options_for_reminder_time_one_minute">In 1 minute before</string>
    <string name="options_for_reminder_time_five_minutes">In 5 minutes before</string>
    <string name="options_for_reminder_time_ten_minutes">In 10 minutes before</string>
    <string name="options_for_reminder_time_fifteen_minutes">In 15 minutes before</string>
    <string name="need_more_time_dialog_seconds">\ seconds</string>
    <string name="options_for_reminder_time_thirty_minutes">In 30 minutes before</string>
    <string name="options_for_reminder_time_one_hour">In 1 hour before</string>
    <string name="custom_notifications">Custom notifications</string>
    <string name="custom_dialog_radio_button_minutes">Minutes before</string>
    <string name="custom_dialog_radio_button_hours">Hours</string>
    <string name="custom_dialog_radio_button_days">Days</string>
    <string name="success_changes">Changes have been saved Successfully</string>

    <string name="cancel_button">cancel</string>
    <string name="ok_button">ok</string>

    <string name="userRole">ROLE_USER</string>
    <string name="adminRole">ROLE_ADMIN</string>

    <string name="deeplink_uri_landing_screen">"ui://landingScreenFragment"</string>
    <string name="deeplink_uri_login_screen">"feature_login://loginFragment"</string>
    <string name="deeplink_uri_my_space_fragment">"feature_landing_screen://landingFragment"</string>
    <string name="deeplink_uri_rooms_fragment">"feature_rooms_screen://roomsEventGridFragment"</string>
    <string name="deeplink_uri_meet_now_fragment">"feature_meet_now_screen://meetNowFragment"</string>
    <string name="deeplink_uri_set_locations_screen">"feature_set_location://locationFragment"</string>
    <string name="deeplink_uri_bottom_navigation">app://bottom_navigation</string>
    <string name="up_button_content_description">Up button</string>
    <string name="book_a_workplace_title">Book a workplace</string>
    <string name="floor_item_title">%s (%d)</string>
    <string name="floor_room_dialog_title">All places on %s (%d)</string>
</resources>