<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/group_of_items_1">
        <item
            android:id="@+id/location_settings"
            android:title="@string/location_settings" />
        <item
            android:id="@+id/theme_colors"
            android:title="@string/text_for_theme_colors" />
    </group>
    <group android:id="@+id/group_of_items_2">
        <item
            android:id="@+id/log_out"
            android:title="@string/text_for_log_out" />
    </group>
    <item
        android:id="@+id/add_event"
        android:icon="@drawable/ic_baseline_add_icon"
        android:title="@string/text_for_add_event"
        app:showAsAction="always" />
</menu>